--- a/assignments/todo_list/todo.html
+++ b/assignments/todo_list/todo.html
@@ -4,9 +4,9 @@
     </head>
     <body>
         <div>
-            <input type='text' name='todo_input'>
-            <button type='submit'>Add Todo</button>
-            <div class='todos'></div>
+            <input  id="todoInput" type='text' name='todo_input'>
+            <button id="addTodo" type='submit'>Add Todo</button>
+            <div class='todos' id="toDoContainer"></div>
         </div>
     </body>
     <script src='./script.js'></script>
